fix pom to integration tests